--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Este é um aplicativo simple para gerir Campeonatos e Corridas.
-Seu modelo atualmenteo consite de:
+Este é um aplicativo simples para gerir Campeonatos e Corridas.
+Seu modelo atualmente consiste de:
 
 Equipes
 
